syntax = "proto3";

package gateway;

option go_package = "github.com/HardDie/mmr_boost_server/pkg/server";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service Application
{
    // Create application for boosting
    rpc Create(CreateRequest) returns (CreateResponse)
    {
        option (google.api.http) = {
            post : "/api/v1/applications"
            body : "*"
        };
    }
}

// Structures

message PublicApplicationObject
{
    int32 id = 1;
    int32 user_id = 2;
    int32 status_id = 3;
    int32 type_id = 4;
    int32 current_mmr = 5;
    int32 target_mmr = 6;
    string tg_contact = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
    optional google.protobuf.Timestamp deleted_at = 10;
}

// Request/Response

message CreateRequest
{
    int32 type_id = 1;
    int32 current_mmr = 2;
    int32 target_mmr = 3;
    string tg_contact = 4;
}
message CreateResponse
{
    PublicApplicationObject data = 1;
}
